--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <artifactId>MenuServerApplication</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <maven.compiler.source>11.0.13</maven.compiler.source>
+    <maven.compiler.target>11.0.13</maven.compiler.target>
+  </properties>
 
 
 </project>
