fix(all): modificated pom

--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,6 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
     </plugins>
+    <finalName>menu-server</finalName>
   </build>
 </project>
