--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -6,5 +6,6 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2 
+      - run: sudo apt-get install cowsay
       - run: ls -l # Liste les fichier du répertoire courant
       - run: cat README.md | cowsay # Affiche le contenu du fichier `README.md` à la base du dépôt
