--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -14,3 +14,14 @@ jobs:
           sudo apt-get install -y cowsay
       - run: ls -l # Liste les fichier du répertoire courant
       - run: cat README.md | cowsay # Affiche le contenu du fichier `README.md` à la base du dépôt
+  run-maven:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu' # See 'Supported distributions' for available options
+        java-version: '11'
+    - run: java -version
+    - run: mvn -version
+    - run: mvn help:effictive-pom 
