ci(yml): fix path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,5 @@ jobs:
     - uses: action/upload-artifact@v2
       with:
         name: menu-server.jar
-        path: target/menu-srver.jar
+        path: target/menu-server.jar
   
