--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,21 @@ jobs:
       with:
         distribution: 'zulu' # See 'Supported distributions' for available options
         java-version: '11'
-    - run: mvn verify
+    - run: mvn package
     - uses: actions/upload-artifact@v2
       with:
         name: menu-server.jar
         path: target/menu-server.jar
-  
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu' # See 'Supported distributions' for available options
+        java-version: '11'
+    - run: mvn package
+    - uses: actions/upload-artifact@v2
+      with:
+        name: menu-server.jar
+        path: target/menu-server.jar
