--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     - run: mvn clean verify
 
   release:
-    needs: [build]
+    needs: build
     runs-on: ubuntu-latest
     if: contains(github.ref, 'refs/tags/v')
     steps:
